# Cave-Runner

./: CMakeLists.txt  README.md  level_1.grs  level_1.grs copy  level_1.txt  level_2.grs  level_3.grs
demo/: Cave Runner
src/: game.h  level_loader.cpp  level_loader.h  loader.cpp  loader.h  main.cpp  math.cpp  math.h  ptr.h  tests.cpp  tests.h  textbased_test.cpp
src/entity/: Barrier.cpp  Barrier.h  Checkpoint.cpp  Checkpoint.h  Coin.cpp  Coin.h  Collectible.cpp  Collectible.cpp.cpp  Collectible.h  Entity.cpp  Entity.h  GrapplingHook.cpp  GrapplingHook.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  Score.cpp  Score.h  Torch.cpp  Torch.h
src/graphics/: Color.cpp  Color.h  GameOverMenu.cpp  GameOverMenu.h  LevelButton.cpp  LevelButton.h  Menu.cpp  Menu.h  PauseMenu.cpp  PauseMenu.h  Scene.cpp  Scene.h  StartMenu.cpp  StartMenu.h  graphics.cpp  graphics.h
src/io/: GameStateReader.cpp  GameStateReader.h  GameStateWriter.cpp  GameStateWriter.h  grs.cpp  grs.h
